# tts-extension

./: AGENTS.md  README.md  main.py  pyproject.toml
configs/: config.yaml
scripts/: check_mps.py
tests/: test_config.py
tts_extension/: __init__.py  actions.py  audio.py  cli.py  config.py  hotkey.py  transcription.py  workflow.py
